# parameter-server-distributed

./: .gitignore  CMakeLists.txt
include/: coordinator.h  coordinator_service.h  nccl_manager.h  parameter_server.h  parameter_server_service.h  worker.h
proto/: coordinator.proto  parameter_server.proto
scripts/: README.md  deploy.sh  scale_workers.sh  start_coordinator.sh  start_parameter_server.sh  start_worker.sh  test_local.sh
src/: coordinator.cpp  coordinator_main.cpp  coordinator_service.cpp  nccl_manager.cpp  parameter_main.cpp  parameter_server.cpp  parameter_server_service.cpp  worker.cpp  worker_main.cpp
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
